--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,8 @@ dependencies {
 //    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 
     //ButterKnife
-    compile 'com.jakewharton:butterknife:8.5.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+/*    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'*/
 
     //Estimote SDK
     compile 'com.estimote:sdk:0.16.+@aar'
@@ -59,5 +59,5 @@ dependencies {
 //    compile 'com.squareup.dagger:dagger-compiler:1.2.5'
 
     //Tests
-    testCompile 'junit:junit:4.12'
+/*    testCompile 'junit:junit:4.12'*/
 }
