deleted jar from lib, added dependecie

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -37,25 +37,23 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
 
     //RxJava
-//    compile 'io.reactivex:rxandroid:1.2.0'
-//    compile 'io.reactivex:rxjava:1.1.4'
-
+    //    compile 'io.reactivex:rxandroid:1.2.0'
+    //    compile 'io.reactivex:rxjava:1.1.4'
     //Retrofit
-//    compile 'com.google.code.gson:gson:2.7'
-//    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-//    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-
+    //    compile 'com.google.code.gson:gson:2.7'
+    //    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    //    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     //ButterKnife
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-
     //Estimote SDK
     compile 'com.estimote:sdk:0.16.+@aar'
 
+    //PhotoView
+    compile 'com.github.chrisbanes.photoview:library:1.2.4'
     //Dagger
-//    compile 'com.squareup.dagger:dagger:1.2.5'
-//    compile 'com.squareup.dagger:dagger-compiler:1.2.5'
-
+    //    compile 'com.squareup.dagger:dagger:1.2.5'
+    //    compile 'com.squareup.dagger:dagger-compiler:1.2.5'
     //Tests
     testCompile 'junit:junit:4.12'
 }
