--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Room"></activity>
+        <activity
+            android:name=".Room"
+            android:theme="@style/RoomTheme">
+        </activity>
         <activity android:name=".MainActivity"></activity>
     </application>
 
