--- a/app/src/main/assets/application.properties
+++ b/app/src/main/assets/application.properties
@@ -1,4 +1,4 @@
-beacon1=
-beacon2=
-beacon3=
-beacon4=
+beacon1=4810b7186752df3a
+beacon2=3804f0fbfdafcc37
+beacon3=9d52d31fa9e0f214
+beacon4=c0e0ce88435105aa
